# GeoTaichi

./: .gitignore  MANIFEST.in  README.md  README_warp.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-warp.txt
bench_warp/: common.py  run_regression.py
demo/: README.md  generate_visualizations.py
demo/outputs/: README.md
demo/outputs/dem/: frame_0000.vtu
demo/outputs/mpdem/: frame_0000.vtu
demo/outputs/mpm/: frame_0000.vts
examples_warp/dem/ParticleSliding/: box_slide.py  cylinder_sliding.py  particle_sliding.py  screw_and_nut.py
examples_warp/dem/PeriodicBoundary/: save_sphere.py  sphere_packing.py
examples_warp/dem/RotatingDrums/: rotating_drum.py  save_sphere.py  sphere_packing.py  static_drum.py
examples_warp/dem/SimpleChute/: curve_patch.py
examples_warp/dem/TriaxialTest/: FillBox.py  conso.py  drained.py  generate.py  undrained.py
examples_warp/dempm/BoxSinking/: box.py
examples_warp/dempm/DebrisFlow/: debris_flow.py
examples_warp/dempm/GranularImpact/: granular_impact.py
examples_warp/dempm/ParticleImpact/: sphere_impact.py
examples_warp/dempm/SphereImpact/: plane_strain.py
geowarp/: __init__.py  backend.py  io_vtk.py
geowarp/dem/: __init__.py  boundary.py  core.py  materials.py
geowarp/geom/: __init__.py  mesh.py  volume.py
geowarp/mpdem/: __init__.py  coupling.py
geowarp/mpm/: __init__.py  explicit.py  implicit.py  materials.py
geowarp/utils/: __init__.py  energy.py
migration/: api_surface.md
packaging/: build_warp_wheel.sh
tests_warp/: regression_snapshots.json  test_regression.py
(+46 files in other folders)
